--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,6 +27,7 @@
             android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:hint="name" />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -43,4 +44,14 @@
             android:layout_height="wrap_content"
             android:hint="nu,mber" />
     </com.google.android.material.textfield.TextInputLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="168dp"
+        android:layout_weight="1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_phone_24"
+        tools:layout_editor_absoluteX="6dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
