--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,103 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    tools:context=".Login">-->
+
+<!--    <androidx.constraintlayout.widget.Guideline-->
+<!--        android:id="@+id/guideline3"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintGuide_end="594dp" />-->
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/tifirstName"-->
+<!--        android:layout_width="310dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginStart="50dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView2"-->
+<!--            android:layout_width="12dp"-->
+<!--            android:layout_height="5dp"-->
+<!--            android:layout_weight="1"-->
+<!--            app:srcCompat="@drawable/baseline_contact_phone_24" />-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/etfirstname"-->
+<!--            android:layout_width="307dp"-->
+<!--            android:layout_height="46dp"-->
+<!--            android:hint="name" />-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--    <com.google.android.material.textfield.TextInputLayout-->
+<!--        android:id="@+id/tinumber"-->
+<!--        android:layout_width="316dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginStart="50dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tifirstName">-->
+
+<!--        <com.google.android.material.textfield.TextInputEditText-->
+<!--            android:id="@+id/etnumber"-->
+<!--            android:layout_width="311dp"-->
+<!--            android:layout_height="54dp"-->
+<!--            android:hint="nu,mber" />-->
+
+<!--    </com.google.android.material.textfield.TextInputLayout>-->
+
+<!--    <Button-->
+<!--        android:id="@+id/btnbutton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="84dp"-->
+<!--        android:layout_marginTop="56dp"-->
+<!--        android:layout_weight="1"-->
+<!--        android:text="Next"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tinumber" />-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="148dp"-->
+<!--        android:layout_weight="1"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/tinumber"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:srcCompat="@drawable/baseline_phone_24" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/btnprevious"-->
+<!--        android:layout_width="92dp"-->
+<!--        android:layout_height="42dp"-->
+<!--        android:layout_marginStart="64dp"-->
+<!--        android:layout_marginTop="56dp"-->
+<!--        android:layout_marginEnd="83dp"-->
+<!--        android:layout_marginBottom="443dp"-->
+<!--        android:text="Previous"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="1.0"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/btnbutton"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/tinumber"-->
+<!--        app:layout_constraintVertical_bias="0.0" />-->
+
+<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,50 +109,67 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="136dp" />
+        app:layout_constraintGuide_end="594dp" />
 
+    <!-- First Name TextInputLayout -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tifirstName"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="12dp"
+            android:layout_height="5dp"
+            app:srcCompat="@drawable/baseline_contact_phone_24" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etfirstname"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:hint="name" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Phone Number TextInputLayout -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tinumber"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tifirstName">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etnumber"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:hint="nu,mber" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <!-- Next Button -->
+
+    <!-- Previous Button -->
+
+    <!-- Phone Icon -->
+
     <Button
         android:id="@+id/btnbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="56dp"
-        android:layout_weight="1"
-        android:text="Next"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="36dp"
+        android:text="back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tinumber" />
 
@@ -62,19 +177,21 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="171dp"
-        android:layout_weight="1"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toStartOf="@+id/tinumber"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/baseline_phone_24" />
 
     <Button
-        android:id="@+id/btnprevious"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="56dp"
-        android:text="Previous"
+        android:id="@+id/btnhome"
+        android:layout_width="92dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="108dp"
+        android:text="Home"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnbutton"
         app:layout_constraintTop_toBottomOf="@+id/tinumber" />
 
